--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.4.5",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "vue-formulate": "^0.12.1"
