--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@braid/vue-formulate": "^2.4.5",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "http-proxy": "^1.18.1",
     "nuxt": "^2.14.6",
     "vue-formulate": "^0.12.1"
