--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
     "fibers": "^5.0.0",
     "sass": "^1.29.0",
