--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.4.5",
+    "animejs": "^3.2.1",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
