--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-proxy": "^1.18.1",
     "nuxt": "^2.14.6",
     "swiper": "^6.3.5",
+    "v-tooltip": "^2.1.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-formulate": "^0.12.1",
     "vue-slick-carousel": "^1.0.6"
