static site updates

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "adamDev",
   "version": "1.0.0",
   "private": true,
+
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
+  "dev": "nuxt dev",
+  "build": "nuxt generate"
+},
   "dependencies": {
+    "7": "^0.0.1",
     "@braid/vue-formulate": "^2.4.5",
     "animejs": "^3.2.1",
     "axios": "^0.21.1",
@@ -16,7 +16,9 @@
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "http-proxy": "^1.18.1",
-    "nuxt": "^2.14.6",
+    "nuxt": "^2.13.3",
+    "postcss": "^8.1.9",
+    "postcss-import": "12.0.1",
     "swiper": "^6.7.5",
     "v-tooltip": "^2.1.2",
     "vue-awesome-swiper": "^4.1.1",
@@ -25,7 +27,7 @@
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
-    "@nuxtjs/tailwindcss": "^3.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "fibers": "^5.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0"
