--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "7": "^0.0.1",
     "axios": "^0.21.1",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
